-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11.0.9, 15, 16
-
Component/s: hotspot
-
b18
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8272986 | 11.0.13 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
C1 atomic operations are supposed to be sequentially consistent by default but the variant in the Shenandoah C1 barrier set assembler isn't. It needs to call cmpxchg_oop with acquire/release set to true and then emit a trailing membar.
Noticed this while debuggingJDK-8252853 but it's actually not related.
Noticed this while debugging
- backported by
-
JDK-8272986 AArch64: Shenandoah C1 CAS is not sequentially consistent
-
- Resolved
-